[refactor] getChatRoomMessages 메소드에서 유효성 검사 이중으로 하는 부분 삭제